--- a/style.css
+++ b/style.css
@@ -5,12 +5,121 @@
 }
 
 body{
+    background-color: #464d57;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .nav-bar{
+    display: flex;
     position: fixed;
+    max-height: 4vh;
     top: 0;
     width: 100%;
     background-color: transparent;
+    background-color: black;
+    padding: 2rem 1rem;
+    justify-content: space-between;
+    align-items: center;
 }
+
+.nav-link{
+    font-size: 1.7rem;
+    color: white;
+    text-decoration: none;
+
+}
+.nav-link:hover{
+    color: unset;
+    animation: all ease 2s;
+}
+header{
+    min-height: 70vh;
+    padding-top: 7rem;
+    background: linear-gradient(rgba(0,0,0,0.4));
+    flex-direction: column;
+    text-align: center;
+   
+    
+
+}
+
+.header-title h1{
+    font-size: 2.7rem; 
+    animation: bounce-in-top 1.1s both;
+    color: #ec1d24;
+    font-family: 'M PLUS 1p', sans-serif;
+    font-weight: bold;
+   
+    
+    
+}
+@keyframes bounce-in-top{
+    0%{
+        transform: translateY(-500px);
+        animation-timing-function: ease-in;
+        opacity: 0;
+    }
+    38%{
+        transform: translateY(0);
+        animation-timing-function: ease-out;
+        opacity: 1;
+    }
+    58%{
+        transform: translateY(-65%);
+        animation-timing-function: ease-in;
+        opacity: 1;
+    }
+}
+
+img{
+    width: 30%;
+    display: block;
+}
+
+.search-element{
+    font-family: inherit;
+    font-size: 1.8rem;
+    outline: 0;
+    border: none;
+    background-color: transparent;
+    caret-color: #fa0505;
+    
+
+}
+.header-search{
+    border: 2px solid rgb(4, 4, 4);
+    width: 50%;
+    align-items: center;
+    margin: auto;
+    padding: 1rem 1rem;
+    border-radius: 3rem;
+    min-width: 420px;
+    background-color: white;
+    
+
+}
+.header-search input{
+    width: 510px;
+}
+.search-btn{
+    font-size: 2.3rem;
+    cursor: pointer;
+    color: rgb(231, 3, 3);
+}
+
+
+/* BootStrap-> Slide Images */
+
+.carousel-item img{
+    background-size: cover;
+    background-position: center;
+    filter: brightness(90%);
+    width: 100%;
+    max-height: 160vh;
+    font-size: 70%;
+    margin-top: auto;
+    top: 0;
+    position: relative;
+
+}
+
