--- a/style.css
+++ b/style.css
@@ -5,16 +5,25 @@
 }
 
 body{
-    background-color: #464d57;
+    background-color: #ffffff;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    font-size: 1.05rem;
+    line-height: 1.6;
+}
+
+.header-section{
+    width: 100%;
+    /* margin: 0 auto; */
+    padding: 2rem;
+    background: #fff;
+    text-align: center;
+    border: 2px solid red;
 }
 
 .nav-bar{
     display: flex;
-    position: fixed;
     max-height: 4vh;
-    top: 0;
-    width: 100%;
     background-color: transparent;
     background-color: black;
     padding: 2rem 1rem;
@@ -26,59 +35,31 @@ body{
     font-size: 1.7rem;
     color: white;
     text-decoration: none;
-
 }
 .nav-link:hover{
     color: unset;
     animation: all ease 2s;
 }
-header{
-    min-height: 70vh;
-    padding-top: 7rem;
-    background: linear-gradient(rgba(0,0,0,0.4));
-    flex-direction: column;
-    text-align: center;
-   
-    
-
+.header-title{
+    display: flex;
+    align-content: center;
+    margin: 1rem 0;
 }
-
 .header-title h1{
     font-size: 2.7rem; 
     animation: bounce-in-top 1.1s both;
     color: #ec1d24;
     font-family: 'M PLUS 1p', sans-serif;
     font-weight: bold;
-   
-    
-    
-}
-@keyframes bounce-in-top{
-    0%{
-        transform: translateY(-500px);
-        animation-timing-function: ease-in;
-        opacity: 0;
-    }
-    38%{
-        transform: translateY(0);
-        animation-timing-function: ease-out;
-        opacity: 1;
-    }
-    58%{
-        transform: translateY(-65%);
-        animation-timing-function: ease-in;
-        opacity: 1;
-    }
+    align-items: center;
+    margin: auto;
+
 }
 
-img{
-    width: 30%;
-    display: block;
-}
 
 .search-element{
     font-family: inherit;
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     outline: 0;
     border: none;
     background-color: transparent;
@@ -87,6 +68,7 @@ img{
 
 }
 .header-search{
+    display: flex;
     border: 2px solid rgb(4, 4, 4);
     width: 50%;
     align-items: center;
@@ -108,18 +90,134 @@ img{
 }
 
 
-/* BootStrap-> Slide Images */
 
-.carousel-item img{
-    background-size: cover;
-    background-position: center;
-    filter: brightness(90%);
-    width: 100%;
-    max-height: 160vh;
-    font-size: 70%;
-    margin-top: auto;
-    top: 0;
-    position: relative;
+/*  Super Hero Container Style */
+
+
+.load-superhero{
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    background: #fff;
+    text-align: center;
+ 
+   
+
+    
 
 }
 
+#super-hero{
+    margin: 2.4rem 0;
+}
+
+.superhero-container{
+     border-radius: 1rem;
+     overflow: hidden;
+     box-shadow: 0 4px 21px -12px, rgba(0, 0, 0, 0.79);
+     margin: 2rem 0;
+    border: 2px solid black;
+
+}
+
+.hero-img img{
+    width: 100%;
+    display: block;
+    
+}
+
+.hero-name{
+    padding: 1.5rem 0.5rem;
+    font-family: 'roboto condensed';
+    font-weight: bold;
+}
+
+.hero-name h3{
+    font-size: 1.4rem;   
+}
+
+.hero-details-btn{
+    text-decoration: none;
+    color: #fff;
+    background: black;
+    font-weight: 500;
+    font-size: 1.3rem;
+    padding: 0.75rem 0.6rem;
+    width: 200px;
+    border-radius: 2rem;
+    transition: all 0.4s linear;
+    display: inline;
+    align-items: center;
+    align-content: center;
+
+}
+
+.hero-details-btn:hover{
+    background-color: #b11803;
+}
+.add-to-favourite{
+    text-decoration: none;
+    color: #fff;
+    margin-left: 2rem;
+    background: black;
+    font-weight: 500;
+    padding: 0 0.4rem;
+    font-size: 2.7rem;
+    width: 500px;
+    margin: 1rem auto;
+    border-radius: 0.8rem;
+    transition: all 0.4s linear;
+    margin-left: 120px;
+   
+
+}
+
+@keyframes bounce-in-top{
+    0%{
+        transform: translateY(-500px);
+        animation-timing-function: ease-in;
+        opacity: 0;
+    }
+    38%{
+        transform: translateY(0);
+        animation-timing-function: ease-out;
+        opacity: 1;
+    }
+    58%{
+        transform: translateY(-65%);
+        animation-timing-function: ease-in;
+        opacity: 1;
+    }
+}
+
+/* Media Queries for SuperHero Container */
+
+@media screen and (min-width: 600px){
+
+    .header-search{
+        width: 540px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+}
+
+@media screen and (min-width: 768px){
+
+    #super-hero{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+    .superhero-container{
+        margin: 0;
+    }
+}
+
+@media screen and (min-width: 992px){
+
+    #super-hero{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    
+}
