--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     background-color: #ffffff;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 300;
-    font-size: 1.05rem;
+    font-size: 1.7rem;
     line-height: 1.6;
 }
 
@@ -83,21 +83,21 @@ body{
 
 }
 .header-search input{
-    width: 460px;
+    width: 490px;
     /* border: 2px solid rebeccapurple; */
     margin-left: -2rem;
     margin-top: 2rem;
 }  
 
 .autocom-box{
-   /* border: 2px solid rgb(168, 27, 27); */
+    /* border: 2px solid rgb(168, 27, 27); */ */
    width: 460px;
    border-radius: 3rem;
    max-height: 280px;
    overflow-y: auto;
    margin: auto;
    padding: 1rem 1rem;
-   opacity: 0;
+    /* opacity: 0;  */
    margin-left: -0.1rem;
    pointer-events: none;
 
@@ -112,7 +112,10 @@ body{
 
 }
 
+
+
 .autocom-box li{
+    border: 2px solid rebeccapurple;
     list-style: none;
     padding: 2px 5px;
     border-radius: 3rem;
@@ -120,17 +123,21 @@ body{
     margin: auto;
     font-family: inherit;
     font-size: 1.3rem;
-    display: none;
+    /* display: none; */
 }
-
+.AddToFavt-btn{
+    /* position: absolute; */
+    margin-left: 19rem;
+    margin-right: 1rem;
+    background-color: rgb(188, 30, 30);
+    border: 2px solid black;
+}
 .autocom-box li:hover{
     background: #efefef;
 }
 
 .header-search.active .autocom-box li{
-
     display: block;
-
 }
 
 
@@ -216,14 +223,25 @@ body{
     font-weight: 500;
     padding: 0 0.4rem;
     font-size: 2.7rem;
-    width: 500px;
+    /* width: 500px; */
     margin: 1rem auto;
     border-radius: 0.8rem;
     transition: all 0.4s linear;
     margin-left: 120px;
-   
-
 }
+.add-to-favourite:hover{
+  color: #ec1d24;
+}
+.fa-heart{
+    text-decoration: none;
+}
+
+.favourite-added{
+    color: #ec1d24;
+}
+
+
+
 
 @keyframes bounce-in-top{
     0%{
@@ -245,6 +263,106 @@ body{
 
 /* Media Queries for SuperHero Container */
 
+@media screen and (min-width: 500px){
+
+
+    body{
+        background-color: #ffffff;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 0.5rem;
+        line-height: 1.1;
+    }
+   
+    .header-search{
+        width: 440px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .search-element{
+        font-family: inherit;
+        font-size: 1.5rem;
+        outline: 0;
+        border: none;
+        background-color: transparent;
+        caret-color: #fa0505;
+        
+    
+    }
+
+
+    .header-search input{
+        width: 380px;
+        border: 2px solid rebeccapurple; 
+        margin-left: -2rem;
+        margin-top: 2rem;
+    }  
+
+
+.search-btn{
+    position: absolute;
+    /* border: 2px solid yellow; */
+    margin: auto;
+    right: 18px;
+    top: 2rem;
+    font-size: 1.8rem;
+    cursor: pointer;
+    color: rgb(231, 3, 3);
+}
+
+    .hero-name{
+        padding: 1.0rem 0.1rem;
+        font-family: 'roboto condensed';
+        font-weight: bold;
+    
+    }
+    
+    .hero-name h3{
+        font-size: 1px;   
+    }
+
+
+.autocom-box{
+    /* border: 2px solid rgb(168, 27, 27); */ 
+   width: 430px;
+   border-radius: 3rem;
+   max-height: 120px;
+   overflow-y: auto;
+   margin: auto;
+   padding: 1rem 1rem;
+    /* opacity: 0;  */
+   margin-left: -0.1rem;
+   pointer-events: none;
+
+   
+   
+}
+
+.autocom-box li{
+    border: 2px solid rebeccapurple;
+    list-style: none;
+    border-radius: 2rem;
+    text-align: left;
+    /* margin: auto; */
+    font-family: inherit;
+    font-size: 1.2rem;
+
+    /* display: none; */
+}
+.AddToFavt-btn{
+    /* position: absolute; */
+    margin-left: 13rem;
+    background-color: rgb(188, 30, 30);
+    border: 2px solid black;
+ 
+}
+    
+    
+}
+
+
+
+
 @media screen and (min-width: 600px){
 
     .header-search{
@@ -252,7 +370,6 @@ body{
         margin-left: auto;
         margin-right: auto;
     }
-
     
     
 }
