--- a/style.css
+++ b/style.css
@@ -122,9 +122,12 @@ body{
     font-family: inherit;
     font-size: 1.3rem;
     max-height: 60px;
-      display: none;   
+    display: none;   
+    
 }
 .AddToFavt-btn{
+
+
     text-align: right;
     right: 0;
     margin-right: 1rem;
@@ -240,6 +243,124 @@ body{
 .favourite-added{
     color: #ec1d24;
 }
+
+/*  Hero Details Section  */
+
+
+/* Meal Details  */
+
+.hero-details{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #f7eaea;
+    background: rgb(2, 2, 2);
+    border-radius: 1rem; 
+    width: 90%;
+    height: 90%;
+    overflow-y: scroll;
+    display: none;
+    padding: 2rem 0;
+
+}
+
+.hero-details::-webkit-scrollbar{
+    width: 10px;
+}
+
+.hero-details::-webkit-scrollbar-thumb{
+    background: #f0f0f0;
+    border-radius: 2rem;
+}
+
+
+/* Js Related */
+
+.showHeroDetails{
+    display: block;
+}
+
+.hero-details-content{
+    margin: 2rem;
+}
+
+.hero-details-content p:not(.hero-features){ 
+    padding: 1rem 0;
+}
+
+.details-close-btn{
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    font-size: 1.8rem;
+    background: #fff;
+    border: none;
+    width: 35px;
+    border-radius: 50%;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.9;
+}
+
+.hero-title{
+    
+    letter-spacing: 1px;
+    padding-bottom: 1rem;
+}
+
+.hero-features{
+    background: #d3d0d0;
+    font-weight: 600;
+    color: rgb(0, 0, 0);
+    display: inline-block;
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.3rem;
+    
+}
+
+.hero-role{
+    display: flex;
+    /* padding: 1rem 0; */
+}
+
+.hero-role h3{
+    background-color: rgb(86, 137, 66);
+    max-height: 40px;
+    min-width: 140px;
+    border: 2px solid black;
+    align-items: center;
+
+}
+.hero-detail-img img{
+    width: 300px;
+    height: 300px;
+    margin: auto auto;
+    display: block;
+    align-items: center;
+    
+}
+.additional-links{
+    border: 2px solid rgb(81, 80, 80);
+    background-color: rgb(82, 80, 80);
+    align-items: center;
+    margin: 1.4rem 0;
+}
+
+.additional-links a{
+    margin-left: 180px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    right: 0;
+    transition: all 0.4s linear;
+}
+.additional-links a:hover{
+    opacity: 0.8;
+}
+
 
 
 
